# oomhero

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bloat  Makefile  README.md  build.rs  go.mod  go.sum
.buildkite/: docker-compose.yml  pipeline.yml
.github/: dependabot.yaml  tests_on_pr.yaml
.github/workflows/: main_branch.yaml  publish_main.yaml  pull_request.yaml  tag.yaml  tests_on_pr.yaml
cmd/bloat/: main.go
cmd/mwatcher/: main.go  prochandler.go
cmd/oomhero/: main.go  main_test.go  watcher.go
manifests/: deployment_test.yaml  pod-example.yaml
mem/: mem.go
mount/: mount.go
proc/: errors.go  proc.go  process.go
src/: arguments.rs  cgroups.rs  daemons.rs  errors.rs  events.rs  http_signals_sender.rs  lib.rs  main.rs  metrics.rs  processes.rs  signals.rs  system.rs  thresholds.rs  unix_signals_sender.rs
tests/: daemons_run.rs  end_2_end.rs  processes.rs  processes_collect_process_data.rs  processeses_list.rs
tests/data/processes_collect_process_data/full_pressure_data/: cpu_pressure  io_pressure
tests/data/processes_collect_process_data/invalid_pressure_data/: cpu_pressure  memory_pressure
tests/data/processes_list/1/: cmdline
tests/data/processes_list/2/: cmdline
tests/data/processes_list/3/: cmdline
tests/data/processes_list/4/: cmdline
tests/workload/: Cargo.toml  Containerfile
tests/workload/src/: main.rs
v2/: Cargo.toml  Containerfile  Makefile  README.md  build.rs
v2/manifests/: deployment_test.yaml
v2/src/: daemons.rs  errors.rs  events.rs  main.rs
