[package]
name = "oomhero"
version = "2.1.1"
edition = "2024"

[build-dependencies]
vergen-git2 = "9.1.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
duration-str = "0.21.0"
env_logger = "0.11.10"
log = "0.4.29"
moka = { version = "0.12.15", features = ["sync"] }
nix = { version = "0.31.2", features = ["fs", "signal"] }
signal-hook = "0.4.4"
thiserror = "2.0.18"
metrics-exporter-prometheus = "0.18.3"
metrics = "0.24.5"
metrics-util = "0.20.3"
mockall = "0.14.0"
tokio = { version = "1.52.3", features = ["full"] }
podman-api = "0.11.0"
futures-util = "0.3.32"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
